infra/monitoring/04-kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: agrotech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-svc
  namespace: agrotech
spec:
  type: LoadBalancer # Se tiver MetalLB, pega IP. Se não, use NodePort.
  selector:
    app: kafka-ui
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080 # Porta Fixa para acesso web
